--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.2",
+    "react-number-format": "^5.1.3",
     "sass": "^1.58.3",
     "typescript": "4.9.5"
   }
